# python_hws

./: pyproject.toml
hw_1/: app.py  app_1_2.py  app_1_3.py
hw_1/artifacts/: artifact.txt  artifact_1_2.txt  artifact_1_3.txt
hw_1/test/: test.txt  test2.txt  test_gen.py
hw_2/: .dockerignore  Dockerfile  README.md  app.py  app_2_2.py  docker-compose.yml  latex.py
hw_2/artifacts/: app.tex  artifact_with_table_and_image.aux  artifact_with_table_and_image.tex
hw_3/: app.py  app_3_2.py  app_3_3.py
hw_3/artifacts/: hash.txt  matrix_at_2.txt  matrix_mul_2.txt  matrix_plus_2.txt
hw_4/: app.py  app_4_2.py  app_4_3.py
hw_4/artifacts/: app.txt  app_4_2_jobs_10.txt  app_4_2_jobs_5.txt  app_4_3.txt
hw_5/: app.py  pyproject.toml
